# v2rayn-guide

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  mkdocs.yml  pyproject.toml  sing-box-1.12-v2rayn-guide.7z
.github/workflows/: deploy-docs.yml
configs/v2rayn/sing-box/: dns.json
configs/v2rayn/xray/: dns.json  routing-rules.json
docs/assets/css/: custom.css
docs/assets/images/: README.md
docs/en/: index.md
docs/en/dns/: index.md  sing-box.md  why-these-providers.md  xray.md
docs/en/faq/: index.md
docs/en/quickstart/: index.md
docs/en/routing/: how-it-works.md  index.md  rules-explained.md  setup.md
docs/en/verification/: index.md
docs/ru/: index.md
docs/ru/dns/: index.md  sing-box.md  why-these-providers.md  xray.md
docs/ru/faq/: index.md
docs/ru/quickstart/: index.md
docs/ru/routing/: how-it-works.md  index.md  rules-explained.md  setup.md
docs/ru/verification/: index.md
